# ez_countdown

./: .replit  Procfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  utils.py  wsgi.py
static/: script.js  style.css
templates/: index.html
