[tool.poetry]
name = "ezcountdown"
version = "0.1.0"
description = ""
authors = ["Mooping <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
pytz = "^2021.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
